copy-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: postgres-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres-container
  template:
    metadata:
      labels:
        app: postgres-container
    spec:
      containers:
        - name: postgres-container
          image: postgres:15.3-alpine
          ports:
            - containerPort: 5432
      #     volumeMounts:
      #       - name: postgres-volume-mount
      #         mountPath: /var/lib/postgresql/data
      # volumes:
      #   - name: postgres-volume-mount
      #     persistentVolumeClaim:
      #       claimName: postgres-pvc
          volumeMounts:
            - name: postgres-0
              mountPath: /var/lib/postgresql/data0
            - name: postgres-1
              mountPath: /var/lib/postgresql/data1
      volumes:
        - name: postgres-0
          persistentVolumeClaim:
            claimName: postgres-pvc-0
        - name: postgres-1
          persistentVolumeClaim:
            claimName: postgres-pvc-1


---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
