deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      securityContext:
        fsGroup: 1000
      hostname: backend-service
      containers:
        - name: backend-app
          image: mohamedamineblibech/backend:v1.132
          ports:
            - containerPort: 80
          volumeMounts:
            - name: media-volume-mount
              mountPath: /django/khedma/media
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: backend-service
  labels:
    app: backend-app
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 80
