deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    deployment: redis
spec:
  selector:
    matchLabels:
      pod: redis
  replicas: 2
  template:
    metadata:
      labels:
        pod: redis
    spec:
      containers:
        - name: master
          image: redis:7.0.3-alpine
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: khedma-redis
spec:
  selector:
    pod: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
